# p-chat

./: .gitignore  CMakeLists.txt  README.md  deploy.sh  poco_build.md  using-meld.md
scripts/: kill.sh  run.sh  show.sh
src/: CMakeLists.txt
src/PData/: CMakeLists.txt
src/PServer/: CMakeLists.txt  README.md
src/PServer/include/PServer/: ChatRequestHandler.hpp  ChatRequestHandlerFactory.hpp  DebugRequestHandler.hpp  HTMLPage.hpp  HTTPChatServer.hpp  IndexPage.hpp  IndexRequestHandler.hpp  PocoForwards.hpp  Sessions.hpp  User.hpp  Users.hpp  validation_error.hpp
src/PServer/src/: ChatRequestHandler.cpp  ChatRequestHandlerFactory.cpp  DebugRequestHandler.cpp  HTMLPage.cpp  HTTPChatServer.cpp  HomePage.cpp  HomePage.hpp  IndexPage.cpp  IndexPage.hpp  IndexRequestHandler.cpp  IndexRequestHandler.hpp  LoginRequestHandler.cpp  LoginRequestHandler.hpp  RegisterPage.cpp  RegisterPage.hpp  RegisterRequestHandler.cpp  RegisterRequestHandler.hpp  Session.cpp  Session.hpp  Sessions.cpp  User.cpp  Users.cpp  ValidatePage.cpp  ValidatePage.hpp  ValidateRequestHandler.cpp  ValidateRequestHandler.hpp
src/app/: CMakeLists.txt
src/app/src/: main.cpp
